--- a/packages/components/blog/source/post-meta/post-meta.scss
+++ b/packages/components/blog/source/post-meta/post-meta.scss
@@ -1,9 +1,5 @@
 @use 'sass:meta';
-@use '@kickstartds/core/source/core/custom-properties';
 @use './post-meta-vars';
-
-$vars: meta.module-variables(post-meta-vars);
-@include custom-properties.styles($vars);
 
 .c-post-meta {
   display: flex;
@@ -15,27 +11,27 @@ $vars: meta.module-variables(post-meta-vars);
     display: flex;
     align-items: center;
 
-    gap: var(--c-post-meta_item--gap);
-    font: var(--c-post-meta_item--font);
-    color: var(--c-post-meta_item--color);
+    gap: var(--c-post-meta__item--gap);
+    font: var(--c-post-meta__item--font);
+    color: var(--c-post-meta__item--color);
 
     &--author {
-      gap: var(--c-post-meta_author--gap);
-      font: var(--c-post-meta_author--font);
-      color: var(--c-post-meta_author--color);
-      font-weight: var(--c-post-meta_author--font-weight);
+      font: var(--c-post-meta__author--font, var(--c-post-meta__item--font));
+      color: var(--c-post-meta__author--color, var(--c-post-meta__item--color));
+      font-weight: var(--c-post-meta__author--font-weight);
+      gap: var(--c-post-meta__author--gap, var(--c-post-meta__item--gap));
     }
   }
 
   &__avatar {
-    height: var(--c-post-meta_author--avatar-size);
-    width: var(--c-post-meta_author--avatar-size);
-    border-radius: var(--c-post-meta_author--avatar-border-radius);
+    height: var(--c-post-meta__avatar--size);
+    width: var(--c-post-meta__avatar--size);
+    border-radius: var(--c-post-meta__avatar--border-radius);
     object-fit: cover;
   }
 
   .icon {
-    height: var(--c-post-meta_item--icon-size);
-    width: var(--c-post-meta_item--icon-size);
+    height: var(--c-post-meta__item--icon-size);
+    width: var(--c-post-meta__item--icon-size);
   }
 }
