--- a/packages/components/form/source/form-check-group/form-check-group.scss
+++ b/packages/components/form/source/form-check-group/form-check-group.scss
@@ -1,17 +1,12 @@
 @use 'sass:meta';
-@use '@kickstartds/core/source/core/custom-properties';
 @use './form-check-group-vars';
 
-$vars: meta.module-variables(form-check-group-vars);
-@include custom-properties.styles($vars);
-
 .c-form-check-group {
-  font: var(--ks-font-interface-s);
-  color: var(--ks-text-color-default);
-
   &__label {
+    font: var(--c-form-check-group__label--font);
+    color: var(--c-form-check-group__label--color);
     display: inline-block;
-    padding: var(--c-form-check-group-label--padding);
+    padding: var(--c-form-check-group__label--padding);
     cursor: default;
   }
 
@@ -19,12 +14,6 @@ $vars: meta.module-variables(form-check-group-vars);
     display: flex;
     flex-flow: column wrap;
     align-items: flex-start;
-    margin: calc(-1 * var(--c-form-check-group--vertical-gutter))
-      calc(-1 * var(--c-form-check-group--horizontal-gutter));
-
-    > * {
-      margin: var(--c-form-check-group--vertical-gutter)
-        var(--c-form-check-group--horizontal-gutter) !important;
-    }
+    gap: var(--c-form-check-group--vertical-gutter);
   }
 }
