feat(component-token): add missing component token #993

--- a/packages/components/base/source/collapsible-box/_collapsible-box-vars.scss
+++ b/packages/components/base/source/collapsible-box/_collapsible-box-vars.scss
@@ -9,6 +9,7 @@ $host: (
 $header: (
   '.c-collapsible-box': (
     font: var(--ks-font-copy-m),
+    color: var(--ks-text-color-default),
     padding: (
       0: 1em 0,
       640: 1em,
