--- a/packages/components/base/source/section/section.scss
+++ b/packages/components/base/source/section/section.scss
@@ -22,6 +22,10 @@ $vars: meta.module-variables(section-vars);
   padding: var(--l-section--space-default) 0;
   background: var(--l-section--background);
 
+  @include container.size('≤', 776px) {
+    background-image: none !important;
+  }
+
   &--space-before-small {
     padding-top: var(--l-section--space-small);
   }
